Fixed video position with z-index and styled buttons for time and sound

--- a/style.css
+++ b/style.css
@@ -7,29 +7,56 @@
 .app {
 	height: 100vh;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: center;
 }
 
 .time-select, 
 .sound-picker,
-.player-container {
+.player-container  {
 	height: 80%;
 	flex: 1;
-}
-
-.time-select {
-	background: lightblue;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
 }
 
 .player-container {
-	background: lightcoral;
+	position: relative;
+}
+.player-container svg {
+	position: absolute;
+	height: 50%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	pointer-events: none;
 }
 
-.sound-picker {
-	background: lightgreen;
+.time-display {
+	position: absolute;
+	bottom: 10%;
+	color: white;
+	font-size: 50px;
 }
 
 video {
-	display: none;
+	position: fixed;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	z-index: -10;
+}
+
+.time-select button,
+.sound-picker button {
+	color: white;
+	width: 30%;
+	height: 10%;
+	background: none;
+	border: 2px solid white;
+	curser: pointer;
+	border-radius: 4px;
+	font-size: 20px;
 }
